finished footer section and added overlay and play button on online-card section

--- a/index.html
+++ b/index.html
@@ -154,38 +154,44 @@
                 <p>A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
             <div class="row justify-content-center">
-                <div class="online-card">
+                <a href="#" class="online-card">
                     <div class="online-card-image">
                         <img src="images/Rectangle 4.png" alt="">
                     </div>
                     <div class="online-card-text">
                         <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                     </div>
-                </div>
-                <div class="online-card">
+                </a>
+                <a href="#" class="online-card">
                     <div class="online-card-image">
                         <img src="images/Rectangle 5.png" alt="">
                     </div>
                     <div class="online-card-text">
                         <p>Did you score? #unblockedgames #school</p>
                     </div>
-                </div>
-                <div class="online-card">
-                    <div class="online-card-image">
+                </a>
+                <a href="#" class="online-card hover-state">
+                    <div class="online-card-image card-bg">
                         <img src="images/Rectangle 7.png" alt="">
+                        <div class="play-btn">
+                            <p class="play-btn-icon">
+                                <i class="fa-solid fa-circle-play"></i>
+                            </p>
+                            <p class="watch-now">Watch Now</p>
+                        </div>
                     </div>
                     <div class="online-card-text">
                         <p>Breaking game records like OG</p>
                     </div>
-                </div>
-                <div class="online-card">
+                </a>
+                <a href="#" class="online-card">
                     <div class="online-card-image">
                         <img src="images/Rectangle 6.png" alt="">
                     </div>
                     <div class="online-card-text">
                         <p>Busted gaming on school laptop, but you are still lit.</p>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -263,6 +269,105 @@
     </section>
     <!-- CATEGORY SECTION ENDS -->
 
+    <!-- FOOTER SECTION STARTS -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="footer-logo">
+                    <a href="#" class="row align-items-center">
+                        <div class="footer-logo-image">
+                            <img src="images/Frame.png" alt="Logo">
+                        </div>
+                        <div class="footer-logo-text">
+                            <p><span>G</span>amer</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="footer-links">
+                    <ul class="row align-items-center justify-content-center">
+                        <li>
+                            <a href="#">Our Story</a>
+                        </li>
+                        <li>
+                            <a href="#">Games</a>
+                        </li>
+                        <li>
+                            <a href="#">Web Games</a>
+                        </li>
+                        <li>
+                            <a href="#">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#">Support</a>
+                        </li>
+                        <li>
+                            <a href="#">My Account</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="footer-social">
+                    <ul class="row align-items-center justify-content-center">
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-apple"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="footer-rules">
+                    <ul class="row align-items-center justify-content-center">
+                        <li>
+                            <a href="#">Terms and Conditions</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Cookie Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Settings</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-copyright text-center">
+                <p>Play Games &#64; Gamer<span> &#64; 2000-2023 Gamer Bangladesh</span></p>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER SECTION ENDS -->
 
 </body>
 
